// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel handles an empty tab 1`] = `
<div
  className="carousel__wrapper"
>
  <div
    className="carousel"
  >
    <span
      className="carousel__tab"
      key="0"
    >
      Title 1
    </span>
    <span
      className="carousel__tab"
      key="1"
    >
      Title 2
    </span>
    <span
      className="carousel__tab"
      key="2"
    >
      Title 3
    </span>
    <span
      className="carousel__tab carousel__tab--selected"
      key="3"
    />
  </div>
  <button
    className="carousel__button btn--left"
    onClick={[Function]}
  >
    <i
      className="indicator fa fa-chevron-left"
    />
  </button>
  <button
    className="carousel__button btn--right btn--more"
    onClick={[Function]}
  >
    <i
      className="indicator fa fa-chevron-right"
    />
  </button>
</div>
`;

exports[`Carousel renders correctly 1`] = `
<div
  className="carousel__wrapper"
>
  <div
    className="carousel"
  >
    <span
      className="carousel__tab"
      key="0"
    >
      Title 1
    </span>
    <span
      className="carousel__tab"
      key="1"
    >
      Title 2
    </span>
    <span
      className="carousel__tab"
      key="2"
    >
      Title 3
    </span>
  </div>
  <button
    className="carousel__button btn--left"
    onClick={[Function]}
  >
    <i
      className="indicator fa fa-chevron-left"
    />
  </button>
  <button
    className="carousel__button btn--right btn--more"
    onClick={[Function]}
  >
    <i
      className="indicator fa fa-chevron-right"
    />
  </button>
</div>
`;
